# ontology-builder

./: .dockerignore  .env.example  .gitignore  ONTOLOGY_BUILDER_Executive_Brief.md  deploy.sh  docker-compose.yml  redeploy.sh
backend/: pyproject.toml
backend/app/: agent.py  config.py  generation.py  main.py  session_store.py  skills.py
backend/app/actions_rules/: lifecycle_fixer.py  output_schema.py  prompt.py  specialist.py
backend/app/datastore/: __init__.py  base.py  migration_manager.py  schema_generator.py  seed_generator.py  sqlite_backend.py
backend/app/intake/: blocks.py  output_schema.py  prompt.py  specialist.py
backend/app/intake/agents/: refiner.py  (+1 more)
backend/app/ontology_designer/: prompt.py  specialist.py
backend/app/ontology_qa/: prompt.py  specialist.py
backend/app/ontology_registry/: extension_validator.py  registry.py
backend/app/research/: output_schema.py  prompt.py  specialist.py
backend/app/shared/: llm_client.py  maf_client.py  patch_ops.py  schemas.py  web_search.py  yaml_writer.py
backend/app/update_intake/: ontology_summary.py  prompt.py  specialist.py
backend/app/validator/: specialist.py
backend/app/workflow/: ag_ui_app.py  pipeline.py  update_ag_ui_app.py  update_pipeline.py
backend/deployment/knowledge/: palantir_ontology_patterns.json
backend/skills/actions-and-permissions/: SKILL.md
backend/skills/domain-research/: SKILL.md
backend/skills/generation-provisioning/: SKILL.md
backend/skills/graph-connectivity/: SKILL.md
backend/skills/nl-to-sql/: SKILL.md
backend/skills/ontology-design-patterns/: SKILL.md
(+59 files in other folders)
