[project]
name = "ontology-builder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "agent-framework>=1.11",
    "agent-framework-ag-ui>=1.0.0rc8",
    "mcp>=1.9",
    "pyyaml",
    "pydantic-settings",
    "python-dotenv",
    "openai>=1.40",
    "aiosqlite",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
